added some css styles

--- a/index.html
+++ b/index.html
@@ -6,36 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donovan Massenburg</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&family=Aldrich&family=Black+Ops+One&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
 </head>
 <!---->
 
 <header>
-   
-    <nav class="navbar">
-        <div class="logo"><h1>Massenburg</h1></div>
-        <a href="#" class="menu-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </a>
-        <ul class="nav-links">
-            <li><a href="#about-me">About</a></li>
-            <li><a href="#my-work">Work</a></li>
-            <li><a href="#contact-me">Contact</a></li>
-        </ul>
-    </nav>
-
-    <section id="hero"> 
+        <nav class="navbar">
+            <div class="logo"><h1>Massenburg</h1></div>
+            <a href="#" class="menu-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <ul class="nav-links">
+                <li><a href="#about-me">About</a></li>
+                <li><a href="#my-work">Work</a></li>
+                <li><a href="#contact-me">Contact</a></li>
+            </ul>
+        </nav>
+</header>
+    <section id="hero">     
         <div class="container">
             <div class="info">
                 <h2>Speak Friend and Enter</h2>
-                <p>Adventours</p>
+                <p>Determined, Ambitious, Clever, Resourceful</p>
                 <a href="#my-resume">My Resume</a>
             </div>
         </div>
     </section>
-</header>
+
 
 <!--hero section start-->
 <body>
@@ -43,7 +44,7 @@
     
     <section id="about-me" class="">
         <h2>About me</h2>
-        <img class="mee" src="/assets/images/self.jpg" alt="">
+        <img class="mee" src="/assets/self.jpg" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Accusamus, vel eius quidem sunt rem dolor non cum et tenetur quos ipsa. <br> laborum voluptatibus adipisci, incidunt tempora a autem fuga ea.</p>
     </section>
 
@@ -111,17 +112,20 @@
         <h2>Contact Me</h2>
         <p>Phone: (984)960-9326</p>
         <p>EMail: <a href="donniemassenburg75@gmail.com">My Email</a></p>
-        <p>Social Media
+        <p>Social Media:
             <a href="https://www.linkedin.com/in/donnie-massenburg-387156198/">LinkedIn</a>
             <a href=""></a>
             <a href=""></a>
         </p>
     </section>
 
-    <section id="my-resume" class="secondary-color">
+    <section id="my-resume">
         <h2>My Resume</h2>
-
+        <p>Coming Soon</p>
     </section>
     
 </body>
+<script>
+
+</script>
 </html>
