added changes to css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
         I embody all the Characreristics of a Slytherin minus the murderous rampage.</p>
     </section>
 
-<!--about section ends-->
+
+<!--work section starts-->
+<!--work section starts-->
+<!--work section starts-->
+
 
 <!--work section starts-->
 
