--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section id="about-me" class="">
         <h2>About me</h2><br>
-        <img class="mee" src="/assets/self.jpg" alt="">
+        <img class="mee" src="./assets/images/self.jpg" alt="">
         <p><br>Hi, Donnie here Im a up and coming Front-End developer, nerd (not that there is anything wrong with that) and all around good guy. <br>
         I embody all the Characreristics of a Slytherin minus the murderous rampage.</p>
     </section>
@@ -83,8 +83,8 @@
 
                 </div>
                 <div class="card-text">
-                    <h3>Coming Soon</h3>
-                    <p></p>
+                    <a href="https://gilinamcbride.github.io/team7-project1-APIs/">Pregame</a>
+                    <p>CSS/HTML/Javascript</p>
                 </div>
             </div>
 
