added link to insomnia project

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 </div>
                 <div class="card-text">
-                    <a href="https://gilinamcbride.github.io/team7-project1-APIs/">Pregame</a>
+                    <a href="https://gilinamcbride.github.io/pregame/">Pregame</a>
                     <p>CSS/HTML/Javascript</p>
                 </div>
             </div>
@@ -94,8 +94,9 @@
 
                 </div>
                 <div class="card-text">
-                    <h3>Coming Soon</h3>
-                    <p></p>
+                    <a href="https://band-site-22.herokuapp.com/">Insomnia</a>
+                    <p>CSS/HTML/BOOTSTRAP</p>
+                    <p>JAVASCRIPT</p>
                 </div>
             </div>
 
